@@ -1,5 +1,12 @@
 2008-11-04  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
+	* modules/toc.pl (TocInit): Context-sensitively set the
+	"$TocConvertH1TagsToH2Tags" option, if not already set.
+	Basically, we only need the option enabled when the Usemod
+	markup module is also installed.
+
+2008-11-04  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
 	* wiki.pl (@HtmlAttrStack): New global variable. This permits
 	the InElement() and [Add|Close]HtmlEnvironment() family of
 	functions to add, remove, and search against HTML tag attributes
